--- a/src/main/resources/static/views/nav.html
+++ b/src/main/resources/static/views/nav.html
@@ -1,12 +1,23 @@
 
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-
-	<div class="collapse navbar-collapse" id="navbarNav">
-		<ul class="navbar-nav">
-		<li class="nav-item "><a class="nav-link" ui-sref="onglet1">onglet 1</a></li>
-		<li class="nav-item"><a class="nav-link" ui-sref="onglet2">onglet 2</a></li>
+<nav class="navbar navbar-expand-md navbar-light bg-light">
+  
+  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home </a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          onglet 1
+        </a>
+        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <li><a class="dropdown-item" ui-sref="clients">Gerer Client</a></li>
+          <li><a class="dropdown-item" href="#">action ibtissam</a></li>
+          <li><a class="dropdown-item" href="#">action khansaa</a></li>
+            </ul>
+          </li>
+          		<li class="nav-item"><a class="nav-link" ui-sref="onglet2">onglet 2</a></li>
 		<li class="nav-item"><a class="nav-link">onglet 3</a></li>
-		</ul>
-	</div>
+        </ul>
+  </div>
 </nav>
