--- a/src/main/resources/static/views/client/newClient.html
+++ b/src/main/resources/static/views/client/newClient.html
@@ -9,7 +9,7 @@
             
             
                     <label class="col-md-2">Nom   </label>
-                    <input type="text" class="form-control col-md-6" ng-model="client.nomClient" name="nomClient"  maxlength="10" required>
+                    <input type="text" class="form-control col-md-6" ng-model="client.nomClient" name="nomClient" placeholder="Nom Client"  maxlength="10" required>
                     <span class="error col-md-4" ng-show="formNewClient.nomClient.$error.required && formNewClient.nomClient.$dirty " >le nom est requis </span>
                     <span class="good col-md-4" ng-show="formNewClient.nomClient.$valid"> <i class="fa fa-check" aria-hidden="true"></i> </span>
 
@@ -18,7 +18,7 @@
         <div class="row">
                
                     <label class="col-md-2">Prenom  </label>
-                    <input  type="text" class="form-control col-md-6" ng-model="client.prenomClient" name="prenomClient"  maxlength="10" required>
+                    <input  type="text" class="form-control col-md-6" ng-model="client.prenomClient" name="prenomClient" placeholder="Prenom Client" maxlength="10" required>
                     <span class="error col-md-4" ng-show="formNewClient.prenomClient.$error.required && formNewClient.prenomClient.$dirty " >le Prenom est requis </span>
                        <span class="good col-md-4" ng-show="formNewClient.prenomClient.$valid"> <i class="fa fa-check" aria-hidden="true"></i> </span>
                      
@@ -27,7 +27,7 @@
             <div class="row">
                 
                     <label class="col-md-2" >Adress Email </label>
-                    <input type="text" class="form-control col-md-6" ng-model="client.emailClient" name="emailClient" placeholder="Email" ng-pattern="eml_add" required>
+                    <input type="text" class="form-control col-md-6" ng-model="client.emailClient" name="emailClient" placeholder="Email CLient" ng-pattern="eml_add" required>
                     <span class="error col-md-4"  ng-show="formNewClient.emailClient.$error.required && formNewClient.emailClient.$dirty ">Email est requis </span>
                  <span class=" error col-md-4" ng-show="formNewClient.emailClient.$error.pattern">Email invalide </span>
                    <span class="good col-md-4" ng-show="formNewClient.emailClient.$valid"> <i class="fa fa-check" aria-hidden="true"></i> </span>
@@ -37,7 +37,7 @@
             <div class="row">
                
                     <label class="col-md-2" >Tel</label>
-                    <input type="text" class="form-control col-md-6" ng-model="client.telClient" name="telClient" ng-pattern="ph_numbr"  maxlength="10" required>
+                    <input type="text" class="form-control col-md-6" ng-model="client.telClient" placeholder="Tel Client" name="telClient" ng-pattern="ph_numbr"  maxlength="10" required>
                     <span class="error col-md-4"  ng-show="formNewClient.telClient.$error.required && formNewClient.telClient.$dirty ">Tel est requis  </span>
                  <span class=" error col-md-4" ng-show="formNewClient.telClient.$error.pattern">Veuillez entrer un numero a 10 chiffres</span>
                    <span class="good col-md-4" ng-show="formNewClient.telClient.$valid"> <i class="fa fa-check" aria-hidden="true"></i> </span>
@@ -47,7 +47,7 @@
             <div class="row">
                   
                     <label class="col-md-2" >Date Naissance</label>
-                    <input type="date" class="form-control col-md-6" ng-model="client.dateNaissanceClient" name="dateNaissanceCleint" placeholder="yyyy-MM-dd" required>
+                    <input type="date" class="form-control col-md-6" ng-model="client.dateNaissanceClient"  name="dateNaissanceCleint" placeholder="yyyy-MM-dd" required>
                     <span class="error col-md-4" ng-show="formNewClient.dateNaissanceClient.$error.required && formNewClient.dateNaissanceClient.$dirty " >Date Naissance est requis </span>
                     <span class="good col-md-4" ng-show="formNewClient.dateNaissanceClient.$valid"> <i class="fa fa-check" aria-hidden="true"></i></span>
                 
@@ -56,7 +56,7 @@
             <div class="row">
               
                     <label class="col-md-2" >Adress</label>
-                     <textarea class="form-control col-md-6" ng-model="client.adressClient" name="adressClient" required rows="2" required></textarea>
+                     <textarea class="form-control col-md-6" ng-model="client.adressClient" placeholder="Adress Client" name="adressClient" required rows="2" required></textarea>
                     <span class="error col-md-4" ng-show="formNewClient.adressClient.$error.required && formNewClient.adressClient.$dirty " >Adress est requis </span>
                   <span class="good col-md-4" ng-show="formNewClient.adressClient.$valid"> <i class="fa fa-check" aria-hidden="true"></i> </span>
                 
