--- a/src/main/resources/static/views/nav.html
+++ b/src/main/resources/static/views/nav.html
@@ -12,7 +12,7 @@
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           <li><a class="dropdown-item" ui-sref="clients">Gerer Client</a></li>
-          <li><a class="dropdown-item" href="#">action ibtissam</a></li>
+          <li><a class="dropdown-item" ui-sref="nouveauEmprunt">action ibtissam</a></li>
           <li><a class="dropdown-item" href="#">action khansaa</a></li>
             </ul>
           </li>
