--- a/src/main/resources/static/views/onglet2.html
+++ b/src/main/resources/static/views/onglet2.html
@@ -1,3 +1,13 @@
-<h1>hello</h1>
-<div>from onglet 2</div>
-	
+
+<div  class="form-grop">
+  <form name="myForm">
+   <label for="mySelectClient">
+ Client
+</label>
+<select name="mySelectClient" id="mySelect"
+      ng-options="option.nomClient  + ' ' + option.prenomClient for option in clients track by option.idClient"
+      ng-model="client"></select> 
+  </form>
+  <hr>
+  <tt>Client = {{client.emprunts}}</tt><br/>
+</div>
