--- a/src/main/resources/static/views/nouveauEmprunt.html
+++ b/src/main/resources/static/views/nouveauEmprunt.html
@@ -55,13 +55,25 @@
       <div class="form-group" >
             <label class="col-md-4 control-label">Materiel</label>
             <div class="col-md-6  inputGroupContainer">
-              <div  class="input-group"> 
+              <div  class="input-group">
                 <span style="background:#3c7cdd ;color:aliceblue;" class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                <select style="width: 150%;height: 40px;"ng-model="designation" name="materiel" class="form-control selectpicker" ng-options="m as m for m in materiels">
-               </select>
+                 <select style="width: 150%;height: 40px;"  ng-model="designation" name="materiel" class="form-control selectpicker" ng-options="m as m for m in materiels">
+                </select>
+                </div>
+               </div>
+               
             </div>
+
+            <div class="form-group" >
+            <label class="col-md-4 control-label">Quantite</label>
+            <div class="col-md-6  inputGroupContainer">
+              <div  class="input-group">
+                <span style="background:#3c7cdd ;color:aliceblue;" class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                 <select style="width: 150%;height: 40px;"  ng-model="quantite" name="quantite" class="form-control selectpicker" ng-options="q as q for q in materiel.quantite">
+                </select>
+                </div>
+               </div>
             </div>
-          </div>
             <div class="form-group" >
             <label class="col-md-4 control-label">Prix en DH</label>
             <div class="col-md-6  inputGroupContainer">
@@ -93,8 +105,7 @@
             <div class="form-group">
               <label class="col-md-4 control-label"></label>
               <div class="col-md-4">
-                <button type="submit" class="btn btn-primary" ng-click="saveEmprunt()">Savve <span class="glyphicon glyphicon-send"></span></button>
-                <button type="submit" class="btn btn-primary" ng-click="searchMateriel()">AJJ<span class="glyphicon glyphicon-send"></span></button>
+                <button type="submit" class="btn btn-primary" ng-click="saveEmprunt()">Save <span class="glyphicon glyphicon-send"></span></button>
               </div>
             </div>
           </fieldset>
@@ -106,6 +117,9 @@
           </div>  
         </div>   
       </div>
+
+
+      
        <!-- PrefixFree -->
       <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
       <script src='http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js'></script>
