--- a/src/main/resources/static/views/nav.html
+++ b/src/main/resources/static/views/nav.html
@@ -16,7 +16,7 @@
           <li><a class="dropdown-item" href="#">action khansaa</a></li>
             </ul>
           </li>
-          		<li class="nav-item"><a class="nav-link" ui-sref="onglet2">onglet 2</a></li>
+          		<li class="nav-item"><a class="nav-link" ui-sref="onglet2">Emprunts</a></li>
 		<li class="nav-item"><a class="nav-link">onglet 3</a></li>
         </ul>
   </div>
