--- a/src/main/resources/static/views/nav.html
+++ b/src/main/resources/static/views/nav.html
@@ -13,11 +13,11 @@
         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           <li><a class="dropdown-item" ui-sref="clients">Gerer Client</a></li>
           <li><a class="dropdown-item" ui-sref="nouveauEmprunt">action ibtissam</a></li>
-          <li><a class="dropdown-item" href="#">action khansaa</a></li>
+          <li><a class="dropdown-item"  href="#">action khansaa</a></li>
             </ul>
           </li>
-          		<li class="nav-item"><a class="nav-link" ui-sref="onglet2">Emprunts</a></li>
-		<li class="nav-item"><a class="nav-link">onglet 3</a></li>
+         <li class="nav-item"><a class="nav-link" ui-sref="onglet2">Emprunts</a></li>
+		<li class="nav-item"><a class="nav-link" ui-sref="onglet3">onglet 3</a></li>
         </ul>
   </div>
 </nav>
