--- a/src/main/resources/static/views/nav.html
+++ b/src/main/resources/static/views/nav.html
@@ -17,7 +17,7 @@
             </ul>
           </li>
          <li class="nav-item"><a class="nav-link" ui-sref="onglet2">Emprunts</a></li>
-		<li class="nav-item"><a class="nav-link" ui-sref="onglet3">onglet 3</a></li>
+		<li class="nav-item"><a class="nav-link" ui-sref="onglet3">Prets</a></li>
         </ul>
   </div>
 </nav>
