--- a/src/main/resources/static/views/emprunt.html
+++ b/src/main/resources/static/views/emprunt.html
@@ -3,6 +3,7 @@
       <md-tabs md-selected="0" md-stretch-tabs="auto" md-align="bottom" md-dynamic-height md-border-bottom md-center-tab md-swipe-content>
         <md-tab label="les emprunts">
           <md-tab-body>
+          <div class="container" style="margin-top: 20px;">
              <div  class="form-grop">
   <br>
   <form name="myForm" style="text-align: center;" >
@@ -18,9 +19,9 @@
 </div>
 <div >
 
-		<table class="table">
+		<table class="table headStyle">
 			<thead>
-				<tr>
+				<tr style="background-color:#F8F8FF;">
 					<th>#</th>
 					<th>dateEmprunt</th>
 					<th>date Retour Prevu</th>
@@ -38,15 +39,15 @@
 
 		</table>
 	</div>
-            <md-tab-body>
+         </div>   <md-tab-body>
           </md-tab>
             <md-tab label="les retards">
           <md-tab-body>
-            <div class="container">
+            <div class="container" style="margin-top: 20px;">
 
-		<table class="table">
+		<table class="table table-striped  headStyle">
 			<thead>
-				<tr>
+				<tr style="color: #fff;background: #333;">
 					<th>#</th>
 					<th>dateEmprunt</th>
 					<th>date Retour Prevu</th>
