--- a/src/main/resources/static/views/nav.html
+++ b/src/main/resources/static/views/nav.html
@@ -16,8 +16,8 @@
           <li><a class="dropdown-item"  href="#">action khansaa</a></li>
             </ul>
           </li>
-         <li class="nav-item"><a class="nav-link" ui-sref="onglet2">Emprunts</a></li>
-		<li class="nav-item"><a class="nav-link" ui-sref="onglet3">Prets</a></li>
+         <li class="nav-item"><a class="nav-link" ui-sref="emprunt">Emprunts</a></li>
+		<li class="nav-item"><a class="nav-link" ui-sref="pret">Prets</a></li>
         </ul>
   </div>
 </nav>
