--- a/src/main/resources/static/views/client/updateClient.html
+++ b/src/main/resources/static/views/client/updateClient.html
@@ -66,7 +66,7 @@
             <div class="card-footer">
 <div class="row">      
 	        <div class="col-md-12" style="text-align: center;">             
-                   <button type="submit" class="btn btn-success" ng-click="updateClient()" type="button" >Update</button>
+                   <button type="submit" class="btn btn-success" ng-disabled="formNewClient.$invalid" ng-click="updateClient()" type="button" >Update</button>
                    
                     <button class="btn btn-secondary"  ng-click="annulerUpdate()" >Annuler</button>
                     
