--- a/src/main/resources/static/views/client/clients.html
+++ b/src/main/resources/static/views/client/clients.html
@@ -1,4 +1,4 @@
-
+<meta charset="UTF-8">
 <div class="container">
 
 
@@ -7,7 +7,10 @@
 </div>
 <div class="container" ng-controller="listClientContl" ng-init="init()">
 
+				<div class="alert alert-success" ng-show="msgClient" style="text-align: center;">
+					{{msgClient}}
 
+					</div>
 	<div class="container">
 
 		<br> <input type="text" ng-model="motCle"
@@ -46,7 +49,7 @@
 							ui-sref="clients.updateClient({ id: client.idClient })">
 							<i class="fa fa-edit"></i>
 						</button>
-						<button class="btn" ng-click="supprimerClient($index)">
+						<button class="btn" data-toggle="modal" data-target="#myModal" ng-click="clientAsupp(client)">
 							<i class="fa fa-trash"></i>
 						</button>
 					</td>
@@ -54,6 +57,7 @@
 			</tbody>
 
 		</table>
+		 
 	</div>
 
 	<div class="container">
@@ -70,5 +74,33 @@
 	</div>
 
 
-
+ <!-- The Modal -->
+  <div class="modal" id="myModal">
+    <div class="modal-dialog">
+      <div class="modal-content">
+      
+        <!-- Modal Header -->
+        <div class="modal-header">
+          <h4 class="modal-title">confirmation de la suppression</h4>
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+        </div>
+        
+        <!-- Modal body -->
+        <div class="modal-body">
+          
+               Etes-vous sûr que vous voulez supprimer ?
+        </div>
+        
+        <!-- Modal footer -->
+        <div class="modal-footer">
+           <button type="button"  class="btn btn-default" data-dismiss="modal">Cancel</button>
+           <button type="button"  class="btn btn-default" data-dismiss="modal" ng-click="supprimerClient(clientSupp)">Delete</button>
+        </div>
+        
+      </div>
+    </div>
+  </div>
 </div>
+
+
+
