--- a/src/main/resources/static/views/pret.html
+++ b/src/main/resources/static/views/pret.html
@@ -5,7 +5,12 @@
   </div>
 <div>
 <div class="card-body formulaire" style="padding: 15px;">
+
 <form name="formNewPret" novalidate>
+<div class="alert alert-success" ng-show="msgClient" style="text-align: center;">
+					{{msgClient}}
+
+					</div>
 <br>
 	<div class="row">
 	<div class="col-md-12" style="text-align: center;">
