--- a/src/main/resources/static/views/newMateriel.html
+++ b/src/main/resources/static/views/newMateriel.html
@@ -17,34 +17,36 @@
 
 <link rel="stylesheet" href="css/style.css">
 
-<div class="card" style="box-shadow: -1px 2px 10px 3px rgba(0, 0, 0, 0.3) inset;">
+<div class="card"
+	style="box-shadow: -1px 2px 10px 3px rgba(0, 0, 0, 0.3) inset;">
 	<div class="card-header text-white bg-info" style="text-align: center;">
 
 		<h3>Nouveau materiel</h3>
 	</div>
 	<div>
 		<div class="card-body formulaire" style="padding: 15px;">
-<div class="container">
-	<div ng-app="myApp" ng-controller="MaterielController">
-	<div id="ta1" ng-if="mode==0">
-		<form class="well form-horizontal" name="materielForm"
-			ng-submit="submitForm(materielForm.$valid)" id="contact_form">
+			<div class="container">
+				<div ng-app="myApp" ng-controller="MaterielController">
+					<div id="ta1" ng-if="mode==0">
+						<form class="well form-horizontal" name="materielForm"
+							ng-submit="submitForm(materielForm.$valid)" id="contact_form">
 
-				<div class="form-group"
-					ng-class="{ 'has-error' : materielForm.reference.$invalid && !materielForm.reference.$pristine }">
-					<label class="col-md-4 control-label">Reference du materiel</label>
-					<div class="col-md-4 inputGroupContainer">
-						<div class="input-group">
-							<span class="input-group-addon"><i
-								class="glyphicon glyphicon-tag	"></i></span> <input name="reference"
-								placeholder="Reference du materiel" class="form-control"
-								type="text" ng-model="materiel.reference" required>
-						</div>
-					</div>
-				</div>
+							<div class="form-group row"
+								ng-class="{ 'has-error' : materielForm.reference.$invalid && !materielForm.reference.$pristine }">
+								<label class="col-md-4 control-label">Reference du
+									materiel</label>
+								<div class="col-md-4 inputGroupContainer">
+									<div class="input-group">
+										<span class="input-group-addon"><i
+											class="glyphicon glyphicon-tag	"></i></span> <input name="reference"
+											placeholder="Reference du materiel" class="form-control"
+											type="text" ng-model="materiel.reference" required>
+									</div>
+								</div>
+							</div>
 
 
-				<div class="form-group"
+							<!-- 				<div class="form-group"
 					ng-class="{ 'has-error' : materielForm.designation.$invalid && !materielForm.designation.$pristine }">
 					<label class="col-md-4 control-label">Designation</label>
 					<div class="col-md-4 inputGroupContainer">
@@ -55,71 +57,108 @@
 								type="text" ng-model="materiel.designation" required>
 						</div>
 					</div>
-				</div>
+				</div> -->
+							<div class="form-group row"
+								ng-class="{ 'has-error' : materielForm.designation.$invalid && !materielForm.designation.$pristine }">
+								<label class="col-md-4 control-label">Designation</label>
+								<div class="col-md-4">
 
-				<div class="form-group"
-					ng-class="{ 'has-error' : materielForm.categorie.$invalid && !materielForm.categorie.$pristine }">
-					<label class="col-md-4 control-label">Categorie</label>
-					<div class="col-md-4 selectContainer">
-						<div class="input-group">
-					<span class="input-group-addon"><i
-								class="glyphicon glyphicon-list"></i></span> <select name="mySelectClient" id="mySelect"
-								ng-options="option.nomCategorie for option in cat track by option.idCategorie"
-								ng-model="materiel.categorie"></select>
+
+									<div class="inputGroupContainer ">
+										<div class="input-group ">
+											<span class="input-group-addon "><i
+												class="glyphicon glyphicon-book"></i></span> <select
+												class="form-control "
+												ng-options="option for option in designations "
+												ng-model="materiel.designation"></select>
+
+
+										</div>
+										<a ng-click="ModeAjoutdesig = true" ng-show="!ModeAjoutdesig"
+											style="cursor: pointer; color: #2a6496;">nouveau
+											designation</a> <a ng-click="ModeAjoutdesig = false"
+											ng-show="ModeAjoutdesig"
+											style="cursor: pointer; color: #2a6496;">annuler</a>
+									</div>
+
+									<div ng-show="ModeAjoutdesig == true">
+										<input name="designation"
+											placeholder="Designation du materiel"
+											class="form-control col-md-8" type="text"
+											ng-model="materiel.designation">
+
+										<button ng-click="addDign();ModeAjoutdesig = false">ajouter</button>
+									</div>
+
+								</div>
+
+
+							</div>
+							<div class="form-group"
+								ng-class="{ 'has-error' : materielForm.categorie.$invalid && !materielForm.categorie.$pristine }">
+								<label class="col-md-4 control-label">Categorie</label>
+								<div class="col-md-4 selectContainer">
+									<div class="input-group">
+										<span class="input-group-addon"><i
+											class="glyphicon glyphicon-list"></i></span> <select
+											name="mySelectClient" id="mySelect"
+											ng-options="option.nomCategorie for option in cat track by option.idCategorie"
+											ng-model="materiel.categorie"></select>
+									</div>
+								</div>
+							</div>
+
+							<!-- Button -->
+							<div class="form-group">
+								<label class="col-md-4 control-label"></label>
+								<div class="col-md-4">
+									<button type="submit" class="btn btn-primary"
+										ng-click="ajouterMateriels()">
+										Save <span class="glyphicon glyphicon-send"></span>
+									</button>
+								</div>
+							</div>
+
+							</fieldset>
+						</form>
+					</div>
+					<div class="panel panel-default" ng-if="mode==1">
+						<div class="panel-heading">
+							Confirmation : <a class="clickable"
+								class="glyphicon glyphicon-log-in" ng-click=newAdd()>new</a>
+						</div>
+						<div class="panel-body">
+							<div class="form-group">
+								<label>Référence du matériel :</label><label>{{materiel.data.reference}}</label>
+							</div>
+							<div class="form-group">
+								<label>Désignation :</label><label>{{materiel.data.designation}}</label>
+							</div>
+							<div class="form-group">
+								<label>Disponible :</label><label>{{materiel.data.disponible}}</label>
+							</div>
+							<div class="form-group">
+								<label>Etat actuel du materiel :</label><label>{{materiel.data.etatMateriel}}</label>
+							</div>
+							<!--<div class="form-group">
+					<label>Categorie :</label><label>{{materiel.data.categorie}}</label>
+				</div>-->
 						</div>
 					</div>
 				</div>
-
-				<!-- Button -->
-				<div class="form-group">
-					<label class="col-md-4 control-label"></label>
-					<div class="col-md-4">
-						<button type="submit" class="btn btn-primary"
-							ng-click="ajouterMateriels()">
-							Save <span class="glyphicon glyphicon-send"></span>
-						</button>
-					</div>
-				</div>
-
-			</fieldset>
-		</form>
-		</div>
-		<div class="panel panel-default" ng-if="mode==1">
-			<div class="panel-heading">
-				Confirmation : <a class="clickable" class="glyphicon glyphicon-log-in" ng-click=newAdd()>new</a>
-			</div>
-			<div class="panel-body">
-				<div class="form-group">
-					<label>Référence du matériel :</label><label>{{materiel.data.reference}}</label>
-				</div>
-				<div class="form-group">
-					<label>Désignation :</label><label>{{materiel.data.designation}}</label>
-				</div>
-				<div class="form-group">
-					<label>Disponible :</label><label>{{materiel.data.disponible}}</label>
-				</div>
-				<div class="form-group">
-					<label>Etat actuel du materiel :</label><label>{{materiel.data.etatMateriel}}</label>
-				</div>
-				<!--<div class="form-group">
-					<label>Categorie :</label><label>{{materiel.data.categorie}}</label>
-				</div>-->
 			</div>
 		</div>
-	</div>
-</div>
-</div>
 
 
 
 
-<!-- PrefixFree -->
- <script
-	src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-<script
-	src='http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js'></script>
-<script
-	src='http://cdnjs.cloudflare.com/ajax/libs/bootstrap-validator/0.4.5/js/bootstrapvalidator.min.js'></script>
+		<!-- PrefixFree -->
+		<script
+			src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+		<script
+			src='http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js'></script>
+		<script
+			src='http://cdnjs.cloudflare.com/ajax/libs/bootstrap-validator/0.4.5/js/bootstrapvalidator.min.js'></script>
 
-<!-- <script src="js/index.js"></script>
+		<!-- <script src="js/index.js"></script>
  -->
