--- a/src/main/resources/static/views/newMateriel.html
+++ b/src/main/resources/static/views/newMateriel.html
@@ -26,7 +26,10 @@
 	<div>
 		<div class="card-body formulaire" style="padding: 15px;">
 			<div class="container">
-				<div ng-app="myApp" ng-controller="MaterielController">
+			<div class="alert alert-success" ng-show="msg" style="text-align: center;">
+					{{msg}}
+					</div>
+				<div >
 					<div id="ta1" ng-if="mode==0">
 						<form class="well form-horizontal" name="materielForm"
 							ng-submit="submitForm(materielForm.$valid)" id="contact_form">
@@ -45,19 +48,6 @@
 								</div>
 							</div>
 
-
-							<!-- 				<div class="form-group"
-					ng-class="{ 'has-error' : materielForm.designation.$invalid && !materielForm.designation.$pristine }">
-					<label class="col-md-4 control-label">Designation</label>
-					<div class="col-md-4 inputGroupContainer">
-						<div class="input-group">
-							<span class="input-group-addon"><i
-								class="glyphicon glyphicon-book"></i></span> <input name="designation"
-								placeholder="Designation du materiel" class="form-control"
-								type="text" ng-model="materiel.designation" required>
-						</div>
-					</div>
-				</div> -->
 							<div class="form-group row"
 								ng-class="{ 'has-error' : materielForm.designation.$invalid && !materielForm.designation.$pristine }">
 								<label class="col-md-4 control-label">Designation</label>
@@ -68,10 +58,10 @@
 										<div class="input-group ">
 											<span class="input-group-addon "><i
 												class="glyphicon glyphicon-book"></i></span> <select
-												class="form-control "
+												class="form-control selectpicker"
 												ng-options="option for option in designations "
-												ng-model="materiel.designation"></select>
-
+												ng-model="materiel.designation" required></select>
+												
 
 										</div>
 										<a ng-click="ModeAjoutdesig = true" ng-show="!ModeAjoutdesig"
@@ -94,28 +84,51 @@
 
 
 							</div>
-							<div class="form-group"
+                              <div class="form-group row"
 								ng-class="{ 'has-error' : materielForm.categorie.$invalid && !materielForm.categorie.$pristine }">
 								<label class="col-md-4 control-label">Categorie</label>
-								<div class="col-md-4 selectContainer">
-									<div class="input-group">
-										<span class="input-group-addon"><i
-											class="glyphicon glyphicon-list"></i></span> <select
-											name="mySelectClient" id="mySelect"
-											ng-options="option.nomCategorie for option in cat track by option.idCategorie"
-											ng-model="materiel.categorie"></select>
-									</div>
-								</div>
-							</div>
+								<div class="col-md-4">
 
+
+									<div class="inputGroupContainer ">
+										<div class="input-group ">
+											<span class="input-group-addon"><i
+											class="glyphicon glyphicon-list"></i></span> <select
+											name="mySelectClient" id="mySelect" class="form-control"
+											ng-options="option.nomCategorie for option in cat track by option.idCategorie"
+											ng-model="materiel.categorie" required></select>
+
+
+										</div>
+										<a ng-click="ModeAjoutCat = true" ng-show="!ModeAjoutCat"
+											style="cursor: pointer; color: #2a6496;">nouveau
+											categorie</a> <a ng-click="ModeAjoutCat = false"
+											ng-show="ModeAjoutCat"
+											style="cursor: pointer; color: #2a6496;">annuler</a>
+									</div>
+
+									<div ng-show="ModeAjoutCat == true">
+										<input name="categorie"
+											placeholder="Categorie du materiel"
+											class="form-control col-md-8" type="text"
+											ng-model="materiel.categorie.nomCategorie">
+
+										<button ng-click="addCat();ModeAjoutCat = false">ajouter</button>
+									</div>
+
+								</div>
+
+
+							</div>
 							<!-- Button -->
 							<div class="form-group">
 								<label class="col-md-4 control-label"></label>
 								<div class="col-md-4">
-									<button type="submit" class="btn btn-primary"
-										ng-click="ajouterMateriels()">
-										Save <span class="glyphicon glyphicon-send"></span>
-									</button>
+						<button type="submit" class="btn btn-success"
+						ng-disabled="materielForm.$invalid" type="button"
+						ng-click="ajouterMateriels()">Save</button>
+
+					<button class="btn btn-secondary" ng-click="reset()">Reset</button>
 								</div>
 							</div>
 
