--- a/src/main/resources/static/views/statistique/chart.html
+++ b/src/main/resources/static/views/statistique/chart.html
@@ -1,4 +1,4 @@
-
+<div class="container">
 <div id="reportPage">
 <div class="row">
 
@@ -25,5 +25,6 @@ chart-labels="labels"  chart-options="opNvMat" >
 <canvas id="etatMat" class="chart chart-pie col-md-6"
   chart-data="dataetatMat" chart-labels="etaMatLabels" chart-options="opEtatMat">
 </canvas> 
+</div>
 </div>
 </div>
