--- a/src/main/resources/static/views/nouveauEmprunt.html
+++ b/src/main/resources/static/views/nouveauEmprunt.html
@@ -5,6 +5,7 @@
 
 
 
+<div class="container">
 
 <div class="card " style="box-shadow: -1px 2px 10px 3px rgba(0, 0, 0, 0.3) inset;">
  <div class="card-header text-white bg-info" style="text-align: center;">
@@ -207,13 +208,5 @@
 </div>
 </div>
 
-
-<!-- <div style="margin-top: 20px;">
-	<button type="submit" class="btn  btn-primary"
-	ng-click="ajouterEmprunt()">
-	Enregistrer<span class="glyphicon glyphicon-send"></span>
-</button>
-<button type="sublit" class="btn  btn-danger" ng-click="annuler()">
-	<span class="class="glyphiconglyphicon-trash"></span>Annuler
-</button> -->
+</div>
 </div>
